# rustysoup

./: .gitignore  Cargo.toml  LICENSE  README.md  SECURITY.md  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  release.yml  wheels.yml
benches/: benchmark_parsers.py  collect_corpus.py  corpus_urls.example.txt  corpus_urls.txt
ci/: check.sh  smoke_wheel.py
docs/: benchmarks.md  corpus.md
examples/: basic.py  migration_from_bs4.py
rustysoup/: __init__.py  __init__.pyi  builder.py  builder.pyi  css.py  css.pyi  dammit.py  dammit.pyi  element.py  element.pyi  exceptions.py  exceptions.pyi  filter.py  filter.pyi  formatter.py  formatter.pyi
src/: attrs.rs  dom.rs  errors.rs  lib.rs  matcher.rs  parser.rs  python.rs  search.rs  selectors.rs  shared.rs  soup.rs  string.rs  tag.rs
tests/: test_attrs.py  test_basic.py  test_bs4_comparison.py  test_bs4_compat_module.py  test_bs4_compat_remaining.py  test_bs4_compat_search.py  test_bs4_compat_serialization.py  test_bs4_compat_todo.py  test_bs4_compat_tree.py  test_bs4_migration_smoke.py  test_find.py  test_malformed_html.py  test_panic_safety.py  test_public_polish.py  test_select.py  test_stack_safety.py  test_text.py
