[package]
name = "rustysoup"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Fast HTML parsing for Python with BeautifulSoup-style ergonomics."
repository = "https://github.com/joaonevess/rustysoup"
readme = "README.md"
keywords = ["html", "parser", "python", "beautifulsoup", "bs4"]
categories = ["parser-implementations", "web-programming"]
exclude = [
    ".benchmarks/**",
    ".github/**",
    ".pytest_cache/**",
    ".venv/**",
    "**/__pycache__/**",
    "**/*.pyc",
    "dist/**",
    "rustysoup/*.so",
    "target/**",
    "tmp/**",
]

[lib]
name = "_rustysoup"
crate-type = ["cdylib"]

[dependencies]
cssparser = "0.37.0"
compact_str = "0.9.0"
encoding_rs = "0.8.35"
html5ever = "0.39.0"
markup5ever = "0.39.0"
memchr = "2.8.0"
parking_lot = "0.12.5"
precomputed-hash = "0.1.1"
pyo3 = { version = "0.28.3", features = ["extension-module"] }
regex = "1.12.3"
selectors = "0.38.0"
smallvec = "1.15.1"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
panic = "unwind"
strip = true
incremental = false
